--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <header class="site-header">
     <div class="container header-top">
       <div class="header-left">
+        <img src="assets/site-logo.png" alt="Logo del sitio" class="site-logo" onerror="this.style.display='none'">
         <div class="site-title">
           <h1>Mi Música</h1>
           <p class="subtitle">Música generada con IA</p>
