--- a/index.html
+++ b/index.html
@@ -3,34 +3,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Música AI - Gaspy</title>
+  <title>Mi Musica - Gaspy</title>
   <link rel="icon" href="assets/site-logo.png">
   <link rel="stylesheet" href="music-styles.css">
 <body>
   <header class="site-header">
     <div class="container header-top">
       <div class="header-left">
-        <img src="assets/site-logo.png" alt="Logo del sitio" class="site-logo" onerror="this.style.display='none'">
+        <img src="assets/default-cover.png" alt="Logo del sitio" class="site-logo">
         <div class="site-title">
-          <h1>Mi Música</h1>
+          <h1>Mi Musica</h1>
           <p class="subtitle">Música generada con IA</p>
         </div>
       </div>
-      <button class="menu-toggle" aria-label="Menú de navegación">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <nav class="main-nav">
-        <a href="/" class="nav-link">🏠 Inicio</a>
-        <a href="/canciones" class="nav-link active">🎵 Mi Música</a>
-      </nav>
+
     </div>
   </header>
 
   <main class="container">
     <section id="music-gallery">
-      <h2>Mi Música Generada con IA</h2>
+      <h2>Mi Musica Generada con IA</h2>
       <p class="description">Explora mi colección de música creada utilizando inteligencia artificial. Cada pieza es única y generada mediante diversos modelos de IA.</p>
       
       <div class="filters-section">
