--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Mi Musica - Gaspy</title>
-  <link rel="icon" href="assets/site-logo.png">
+  <link rel="icon" type="image/png" href="assets/default-cover.png">
   <link rel="stylesheet" href="music-styles.css">
 <body>
   <header class="site-header">
