--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
   <link rel="icon" type="image/png" href="assets/default-cover.png">
   <link rel="stylesheet" href="music-styles.css">
 <body>
+  <nav class="main-menu">
+    <div class="menu-items">
+      <a href="#" class="menu-item active">
+        <span class="menu-icon">🏠</span>
+        Inicio
+      </a>
+      <a href="#music-gallery" class="menu-item">
+        <span class="menu-icon">🎵</span>
+        Mi Música
+      </a>
+    </div>
+  </nav>
   <header class="site-header">
     <div class="container header-top">
       <div class="header-left">
-        <img src="assets/site-logo.png" alt="Logo del sitio" class="site-logo" onerror="this.style.display='none'">
         <div class="site-title">
           <h1>Mi Musica</h1>
           <p class="subtitle">Música generada con IA</p>
         </div>
       </div>
-
     </div>
   </header>
 
