--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
   <link rel="stylesheet" href="music-styles.css">
 <body>
   <nav class="main-menu">
-    <div class="menu-items">
-      <a href="#" class="menu-item active">
-        <span class="menu-icon">🏠</span>
-        Inicio
-      </a>
-      <a href="#music-gallery" class="menu-item">
-        <span class="menu-icon">🎵</span>
-        Mi Música
-      </a>
-    </div>
+    <a href="https://thegaspygames.github.io" class="menu-item">
+      <img src="assets/home.png" alt="Inicio" class="menu-icon">
+      <span>Inicio</span>
+    </a>
+    <a href="#" class="menu-item active">
+      <img src="assets/music.png" alt="Mi Música" class="menu-icon">
+      <span>Mi Música</span>
+    </a>
   </nav>
   <header class="site-header">
     <div class="container header-top">
