--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <nav class="main-menu">
     <a href="https://thegaspygames.github.io" class="menu-item">
-      <img src="assets/home.png" alt="Inicio" class="menu-icon">
-      <span>Inicio</span>
+      <span class="menu-icon">🏠</span>
+      Inicio
     </a>
     <a href="#" class="menu-item active">
-      <img src="assets/music.png" alt="Mi Música" class="menu-icon">
-      <span>Mi Música</span>
+      <span class="menu-icon">🎵</span>
+      Mi Música
     </a>
   </nav>
   <header class="site-header">
