--- a/index.html
+++ b/index.html
@@ -29,6 +29,46 @@
   </header>
 
   <main class="container">
+    <section id="upload-music" class="upload-section">
+      <h2>Sube tu Música</h2>
+      <p class="description">
+        Agrega tus propias canciones sin necesidad de copiarlas manualmente a la carpeta del proyecto. Elige un archivo de audio y completa los datos opcionales para verlo inmediatamente en la galería y en la playlist.
+      </p>
+
+      <form id="uploadForm" class="upload-form">
+        <div class="form-row">
+          <label for="songFile">Archivo de audio (MP3, WAV, OGG)</label>
+          <input type="file" id="songFile" name="songFile" accept="audio/*" required>
+        </div>
+
+        <div class="form-row">
+          <label for="songTitle">Título</label>
+          <input type="text" id="songTitle" name="songTitle" placeholder="Ej: Mi nueva canción AI">
+        </div>
+
+        <div class="form-row two-columns">
+          <div>
+            <label for="songGenre">Género</label>
+            <input type="text" id="songGenre" name="songGenre" placeholder="Ej: Synthwave">
+          </div>
+          <div>
+            <label for="songModel">Modelo de IA</label>
+            <input type="text" id="songModel" name="songModel" placeholder="Ej: Suno v3">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <label for="coverFile">Portada (opcional)</label>
+          <input type="file" id="coverFile" name="coverFile" accept="image/*">
+        </div>
+
+        <div class="form-actions">
+          <button type="submit" class="upload-button">Subir canción</button>
+          <span id="uploadStatus" class="upload-status" aria-live="polite"></span>
+        </div>
+      </form>
+    </section>
+
     <section id="music-gallery">
       <h2>Mi Musica Generada con IA</h2>
       <p class="description">Explora mi colección de música creada utilizando inteligencia artificial. Cada pieza es única y generada mediante diversos modelos de IA.</p>
