--- a/index.html
+++ b/index.html
@@ -29,6 +29,67 @@
   </header>
 
   <main class="container">
+    <section id="creator-tools" class="creator-section">
+      <div id="discordAuthCard" class="discord-auth-card">
+        <h2>Panel privado</h2>
+        <p class="description">
+          Conéctate con Discord para demostrar que eres <strong>the_gaspy_games</strong>. Solo entonces podrás gestionar y subir
+          nuevas canciones directamente desde esta página.
+        </p>
+        <div class="discord-auth-actions">
+          <button id="discordLoginButton" class="discord-login-button" type="button">
+            <span aria-hidden="true">🪪</span>
+            Conectar con Discord
+          </button>
+          <button id="discordLogoutButton" class="discord-logout-button hidden" type="button">
+            Cerrar sesión
+          </button>
+        </div>
+        <p id="discordStatus" class="discord-status" aria-live="polite"></p>
+      </div>
+
+      <div id="uploadWrapper" class="upload-section hidden" aria-hidden="true">
+        <h2>Sube tu Música</h2>
+        <p class="description">
+          Agrega tus propias canciones sin necesidad de copiarlas manualmente a la carpeta del proyecto. Elige un archivo de audio
+          y completa los datos opcionales para verlo inmediatamente en la galería y en la playlist.
+        </p>
+
+        <form id="uploadForm" class="upload-form">
+          <div class="form-row">
+            <label for="songFile">Archivo de audio (MP3, WAV, OGG)</label>
+            <input type="file" id="songFile" name="songFile" accept="audio/*" required>
+          </div>
+
+          <div class="form-row">
+            <label for="songTitle">Título</label>
+            <input type="text" id="songTitle" name="songTitle" placeholder="Ej: Mi nueva canción AI">
+          </div>
+
+          <div class="form-row two-columns">
+            <div>
+              <label for="songGenre">Género</label>
+              <input type="text" id="songGenre" name="songGenre" placeholder="Ej: Synthwave">
+            </div>
+            <div>
+              <label for="songModel">Modelo de IA</label>
+              <input type="text" id="songModel" name="songModel" placeholder="Ej: Suno v3">
+            </div>
+          </div>
+
+          <div class="form-row">
+            <label for="coverFile">Portada (opcional)</label>
+            <input type="file" id="coverFile" name="coverFile" accept="image/*">
+          </div>
+
+          <div class="form-actions">
+            <button type="submit" class="upload-button">Subir canción</button>
+            <span id="uploadStatus" class="upload-status" aria-live="polite"></span>
+          </div>
+        </form>
+      </div>
+    </section>
+
     <section id="music-gallery">
       <h2>Mi Musica Generada con IA</h2>
       <p class="description">Explora mi colección de música creada utilizando inteligencia artificial. Cada pieza es única y generada mediante diversos modelos de IA.</p>
